Tokopodia/K8S/tokopodia-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tokopodia-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tokopodia
  template:
    metadata:
      labels:
        app: tokopodia
    spec:
      containers:
      - name: tokopodia
        image: rizhy/tokopodia:latest
        resources:
          limits:
            memory: "500Mi"
            cpu: "500m"
---
apiVersion: v1
kind: Service
metadata:
  name: tokopodia-clusterip-srv
spec:
  type: ClusterIP
  selector:
    app: tokopodia
  ports:
  - name: tokopodia
    protocol: TCP
    port: 80
    targetPort: 80
