Tokopodia/K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: tokopodia.com
    http:
      paths:
      - pathType: Prefix
        path: "/graphql"
        backend:
          service:
            name: tokopodia-clusterip-srv
            port:
              number: 80
